@startuml
!include https://raw.githubusercontent.com/ptrkcsk/one-dark-plantuml-theme/v1.0.0/theme.puml

class com.backend.securitygw.dataobject.request.UserCurrentCredential {
- String currentEmail
- String currentPwd
}
class com.backend.securitygw.dataobject.request.ChangeEmailRequest {
- String newEmail
}
class com.backend.securitygw.dataobject.request.ChangePasswordRequest {
- String newPwd
}


com.backend.securitygw.dataobject.request.UserCurrentCredential <|-- com.backend.securitygw.dataobject.request.ChangeEmailRequest
com.backend.securitygw.dataobject.request.UserCurrentCredential <|-- com.backend.securitygw.dataobject.request.ChangePasswordRequest
@enduml